--- a/app/views/exchanges/_exchange_box.html.erb
+++ b/app/views/exchanges/_exchange_box.html.erb
@@ -27,10 +27,8 @@
             <input type='text' id='result' name='result' class='form-control' placeholder='Resultado' readonly>
           </div>
         </div>
-        <div>
-          <button type='button' id='invert' class='btn btn-primary btn-exchange col-md-12'>
-            INVERTER
-          </button>
+        <div class="text-center">
+          <i id="invert" class="fa fa-refresh exchange_invert_icon"></i>
         </div>
       <% end %>
     </div>
